# slicops

./: .gitignore  README.md  notes.md  package-lock.json  podman.md  pyproject.toml  test.sh
container-conf/: build.sh  epics-install.sh  radia-run.sh  slicops-demo.sh  slicops-entry.sh
docs/: index.rst
etc/: epics-install.sh  epics-install.txt  run.sh
slicops/: __init__.py  auth_api.py  config.py  const.py  ctx.py  device.py  device_db.py  device_db_sql.py  device_meta_raw.py  device_screen.py  device_sql_db.py  field.py  mock_epics.py  plot.py  quest.py  slicops_console.py  ui_api.py  ui_layout.py  unit_util.py
slicops/app/: screen.py  screen_schema.py
slicops/device/: __init__.py  screen.py
slicops/field/: __init__.py  simple.py
slicops/package_data/: .gitignore  device_db.sqlite3  device_sql_db.sqlite3  slac-csv-pv.yaml
slicops/pkcli/: __init__.py  device_db.py  device_yaml.py  epics.py  fractals.py  ioc.py  lcls_elements_csv.py  lcls_tools_yaml.py  lcls_yaml.py  mock_ioc.py  service.py  simple.py  slac_yaml.py  yaml_db.py
slicops/sliclet/: __init__.py  fractals.py  hello.py  plot.py  screen.py  simple.py  yaml_db.py
slicops/ui_api/: __init__.py  screen.py  simple.py
tests/: ctx_test.py  device_db_test.py  device_screen_test.py  device_test.py  field1_test.py  import_test.py  plot_test.py  screen_api_test.py  simple_api_test.py  sliclet_test.py  ui_api_test.py
ui/: README.md  angular.json  dev-proxy.conf.json  index.html  package.json  vite.config.js
ui2/: README.md
ui3/: Migration-Guide-Angular-to-Vue.md  package.json  vue.config.js
(+133 files in other folders)
